# cpp_dev_container

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  Dockerfile_ide  devcontainer.json
.devcontainer/scripts/: postCreate.sh
.github/workflows/: docker_build_publish.yaml
cpp_dojo/: .cmake-format.yaml  CMakeLists.txt  README.md  conanfile.txt  setup.cmake
cpp_dojo/impl/: CMakeLists.txt
cpp_dojo/impl/inc/kata/: kata.hpp
cpp_dojo/impl/src/kata/: kata.cpp
cpp_dojo/unittest/: CMakeLists.txt  kata.cpp
